<resources>
    <string name="app_name">IT-eBooks</string>
    <string name="app_title">ITBooks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>

    <string name="book_title">Title</string>
    <string name="book_subtitle">Subtitle</string>
    <string name="book_description">Description</string>
    <string name="book_author">Author</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_page">Total pager</string>
    <string name="book_year">Year</string>
    <string name="book_download_url">Download</string>

    <string name="add_tab">add to tabs</string>
    <string name="no_data">No data</string>
    <string name="itebook">http://it-ebooks.info</string>

    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="about">About</string>
    <string name="license">License</string>

    <string name="auto_cache_in_wifi">Auto cache in wifi</string>
    <string name="home_page_layout">Homepage layout</string>


    <string name="homepage_linear">Linear</string>
    <string name="homepage_grid">Grid</string>

    <string name="current_version">version %1$s</string>
    <string name="favorite_title">Favorite</string>
    <string name="favorite_clear_all">Clear all</string>
    <string name="favorite_sort">Sort</string>
    <string name="relation">Relation</string>
    <string name="info">Info</string>
</resources>
